准备做忘记密码

--- a/速递医疗 医生端/StoryBoard/Login.storyboard
+++ b/速递医疗 医生端/StoryBoard/Login.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -276,6 +277,140 @@
                 <exit id="KC6-y2-xeW" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="743" y="158"/>
+        </scene>
+        <!--Register View Controller-->
+        <scene sceneID="f5G-Yh-ZVF">
+            <objects>
+                <viewController id="d6I-81-jxX" customClass="RegisterViewController" customModule="速递医疗_医生端" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VYv-b3-lLc"/>
+                        <viewControllerLayoutGuide type="bottom" id="yn3-DH-wmf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="SVR-fI-au2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bj_01" translatesAutoresizingMaskIntoConstraints="NO" id="EjF-eI-JUo">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="333.5"/>
+                                <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="8" right="8"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZGa-q5-XkB">
+                                <rect key="frame" x="30" y="333.5" width="315" height="165"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="    请输入手机号码" textAlignment="natural" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO" id="an9-DN-VD7">
+                                        <rect key="frame" x="0.0" y="0.0" width="315" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="    输入短信验证码" textAlignment="natural" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO" id="rNT-HK-rx7">
+                                        <rect key="frame" x="0.0" y="45" width="158" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="    输入新密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zMJ-tc-Y2J">
+                                        <rect key="frame" x="0.0" y="90" width="315" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hhO-qX-EMT">
+                                        <rect key="frame" x="157" y="44" width="158" height="32"/>
+                                        <color key="backgroundColor" red="0.49944639210000003" green="0.84990459679999997" blue="0.98690015080000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <state key="normal" title="获取验证码"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="sendMsg:" destination="d6I-81-jxX" eventType="touchUpInside" id="gXs-QF-owa"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="an9-DN-VD7" firstAttribute="top" secondItem="ZGa-q5-XkB" secondAttribute="top" id="LGH-wF-bug"/>
+                                    <constraint firstItem="hhO-qX-EMT" firstAttribute="baseline" secondItem="rNT-HK-rx7" secondAttribute="baseline" id="LWz-RC-CPR"/>
+                                    <constraint firstItem="rNT-HK-rx7" firstAttribute="leading" secondItem="ZGa-q5-XkB" secondAttribute="leading" id="Nck-Jz-J0D"/>
+                                    <constraint firstItem="zMJ-tc-Y2J" firstAttribute="top" secondItem="rNT-HK-rx7" secondAttribute="bottom" constant="15" id="PIF-dS-fU5"/>
+                                    <constraint firstItem="an9-DN-VD7" firstAttribute="width" secondItem="ZGa-q5-XkB" secondAttribute="width" id="Qo1-Wc-rms"/>
+                                    <constraint firstItem="rNT-HK-rx7" firstAttribute="width" secondItem="ZGa-q5-XkB" secondAttribute="width" multiplier="0.5" id="Rt8-MV-xpt"/>
+                                    <constraint firstItem="zMJ-tc-Y2J" firstAttribute="width" secondItem="ZGa-q5-XkB" secondAttribute="width" id="Y2o-EX-bf0"/>
+                                    <constraint firstItem="an9-DN-VD7" firstAttribute="leading" secondItem="ZGa-q5-XkB" secondAttribute="leading" id="a94-q2-8OR"/>
+                                    <constraint firstItem="rNT-HK-rx7" firstAttribute="top" secondItem="an9-DN-VD7" secondAttribute="bottom" constant="15" id="mdU-pX-ml3"/>
+                                    <constraint firstAttribute="trailing" secondItem="hhO-qX-EMT" secondAttribute="trailing" id="oMQ-Z8-mSN"/>
+                                    <constraint firstItem="zMJ-tc-Y2J" firstAttribute="leading" secondItem="ZGa-q5-XkB" secondAttribute="leading" id="qml-73-hcU"/>
+                                    <constraint firstItem="hhO-qX-EMT" firstAttribute="width" secondItem="rNT-HK-rx7" secondAttribute="width" id="wF2-Ad-cZ0"/>
+                                    <constraint firstAttribute="height" constant="165" id="xev-46-FEI"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2dv-28-b9S">
+                                <rect key="frame" x="160.5" y="538.5" width="54" height="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <state key="normal" title="返回登录"/>
+                                <connections>
+                                    <segue destination="6mQ-X8-PhN" kind="unwind" unwindAction="unwindToLoginWithSegue:" id="ekv-LN-QSV"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T4W-Oj-JUx">
+                                <rect key="frame" x="30" y="508.5" width="315" height="30"/>
+                                <color key="backgroundColor" red="0.45963469150000003" green="0.67534756659999995" blue="0.97651445869999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Pw2-sh-dpR"/>
+                                </constraints>
+                                <state key="normal" title="注册">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="clickRegister:" destination="d6I-81-jxX" eventType="touchUpInside" id="5de-K5-wpV"/>
+                                </connections>
+                            </button>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="g6l-8o-EYq">
+                                <rect key="frame" x="148" y="127" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="3Zh-V0-VUz"/>
+                                    <constraint firstAttribute="width" constant="80" id="sZG-sz-hCh"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="g6l-8o-EYq" firstAttribute="centerY" secondItem="EjF-eI-JUo" secondAttribute="centerY" id="1cZ-b1-4zW"/>
+                            <constraint firstItem="T4W-Oj-JUx" firstAttribute="leading" secondItem="SVR-fI-au2" secondAttribute="leading" constant="30" id="5NF-EL-nqq"/>
+                            <constraint firstItem="g6l-8o-EYq" firstAttribute="centerX" secondItem="EjF-eI-JUo" secondAttribute="centerX" id="7hb-aq-luS"/>
+                            <constraint firstAttribute="trailing" secondItem="EjF-eI-JUo" secondAttribute="trailing" id="B8T-oj-vsF"/>
+                            <constraint firstItem="ZGa-q5-XkB" firstAttribute="top" secondItem="EjF-eI-JUo" secondAttribute="bottom" id="L1s-dq-1Jt"/>
+                            <constraint firstItem="EjF-eI-JUo" firstAttribute="leading" secondItem="SVR-fI-au2" secondAttribute="leading" id="Peb-yU-ryQ"/>
+                            <constraint firstItem="2dv-28-b9S" firstAttribute="centerX" secondItem="SVR-fI-au2" secondAttribute="centerX" id="VcF-cn-AYM"/>
+                            <constraint firstItem="EjF-eI-JUo" firstAttribute="top" secondItem="SVR-fI-au2" secondAttribute="top" id="YeV-bA-jgg"/>
+                            <constraint firstItem="2dv-28-b9S" firstAttribute="top" secondItem="T4W-Oj-JUx" secondAttribute="bottom" id="dwI-mF-4vo"/>
+                            <constraint firstAttribute="trailing" secondItem="ZGa-q5-XkB" secondAttribute="trailing" constant="30" id="j3n-lf-9Ee"/>
+                            <constraint firstItem="ZGa-q5-XkB" firstAttribute="leading" secondItem="SVR-fI-au2" secondAttribute="leading" constant="30" id="mu5-7E-z79"/>
+                            <constraint firstAttribute="trailing" secondItem="T4W-Oj-JUx" secondAttribute="trailing" constant="30" id="n7k-18-MmA"/>
+                            <constraint firstItem="T4W-Oj-JUx" firstAttribute="top" secondItem="ZGa-q5-XkB" secondAttribute="bottom" constant="10" id="tN6-Pu-AXE"/>
+                            <constraint firstItem="EjF-eI-JUo" firstAttribute="height" secondItem="SVR-fI-au2" secondAttribute="height" multiplier="0.5" id="v6U-Vt-ji3"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="X7j-0d-UKg"/>
+                    <connections>
+                        <outlet property="msgCodeTextField" destination="rNT-HK-rx7" id="PHu-dF-q12"/>
+                        <outlet property="password" destination="zMJ-tc-Y2J" id="W67-1s-Pwu"/>
+                        <outlet property="photoTextField" destination="an9-DN-VD7" id="JYU-kQ-A45"/>
+                        <outlet property="registerButton" destination="T4W-Oj-JUx" id="JOp-Ov-H1d"/>
+                        <outlet property="sendMsgButton" destination="hhO-qX-EMT" id="XX1-mc-iNu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PTa-Uj-HeF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="6mQ-X8-PhN" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-274" y="889"/>
         </scene>
     </scenes>
     <resources>
